--- a/4.3 HTML Porfolio Project/public/birthday invite.html
+++ b/4.3 HTML Porfolio Project/public/birthday invite.html
@@ -6,13 +6,13 @@
 
 
 
-<h1><b>It's my birthday !</b></h1>
+<h2><b>It's my birthday !</b></h2>
 <h2>On the 27th of July .</h2>
 <!-- <video width="320" height="340" controls>
     <source src="assets/IMG_0303.MOV" type="video/mp4">
     Your browser does not support the video tag.
 </video> -->
-<img   width="320" height="400"src="assets/photo_2024-03-12_20-24-26.jpg" alt="This is me  "> 
+<img   width="320" height="400"src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="This is me  "> 
 <h3>What to bring ; </h3>
 <ul>
     <li>Ballons (I love ballons) </li>
